--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -6,3 +6,11 @@
   month = 5,
   url = {https://www.asdfasdf.asdfasdf.asdfasdfads}
 }
+@InProceedings{Whitfielf-PNAC17,
+  author = 	 {Williams, D. M.; Ovchinnikova, O. G.; Koizumi, A.; Mainprize, I. L.; Kimber, M. S.; Lowary, T. L.; Whitfield, C.},
+  title = 	 {A single polysaccharide assembly protein that integrates polymerization, termination and chain-length quality control},
+  booktitle =    {Proc. Natl. Acad. Sci.},
+  year = 	 2017,
+  month = 5,
+  url = {http://www.pnas.org/content/114/7/E1215.long}
+}
