--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,16 +1,35 @@
-@InProceedings{XXX,
-  author = 	 {Author 1 and Author 2},
-  title = 	 {Awesome Publication},
-  booktitle =    {International Conference on Awesome Research},
-  year = 	 2014,
-  month = 5,
-  url = {https://www.asdfasdf.asdfasdf.asdfasdfads}
+@inproceedings{campipes-iiswc17,
+  author={Amrita Mazumdar and Thiery Moreau and Sung Kim and Meghan Cowan and Armin Alaghi and Luis Ceze and Mark Oskin and Visvesh Sathe},
+  booktitle={IEEE International Symposium on Workload Characterization (IISWC)},
+  title={Exploring computation-communication tradeoffs in camera systems},
+  year=2017,
+  month=10,
+  url={http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8167775&isnumber=8167743}
 }
-@InProceedings{Whitfielf-PNAC17,
-  author = 	 {Williams, D. M.; Ovchinnikova, O. G.; Koizumi, A.; Mainprize, I. L.; Kimber, M. S.; Lowary, T. L.; Whitfield, C.},
-  title = 	 {A single polysaccharide assembly protein that integrates polymerization, termination and chain-length quality control},
-  booktitle =    {Proc. Natl. Acad. Sci.},
-  year = 	 2017,
-  month = 5,
-  url = {http://www.pnas.org/content/114/7/E1215.long}
+
+@inproceedings{shoebox-hotstorage17,
+  author = {Eddie Yan and Kaiyuan Zhang and Xi Wang and Karin Strauss and Luis Ceze},
+  title = {Customizing Progressive JPEG for Efficient Image Storage},
+  booktitle = {USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage)},
+  year = 2017,
+  month = 7,
+  url = {https://www.usenix.org/system/files/conference/hotstorage17/hotstorage17-paper-yan.pdf}
+}
+
+@inproceedings{vrsolver-hpg17,
+  author = {Amrita Mazumdar and Armin Alaghi and Jonathan T. Barron and David Gallup and Luis Ceze and Mark Oskin and Steven M. Seitz},
+  title = {A Hardware-Friendly Bilateral Solver for Real-Time Virtual Reality Video},
+  booktitle = {High-Performance Graphics (HPG)},
+  year = 2017,
+  month = 7,
+  url = {https://homes.cs.washington.edu/~amrita/papers/hpg17.pdf}
+}
+
+@inproceedings{msp430-wddd17,
+  author = {Bill Zorn and Dan Grossman and Luis Ceze},
+  title = {Solver Aided Reverse Engineering of Architectural Features},
+  booktitle = {Workshop on Duplicating, Deconstructing and Debunking (WDDD w/ ISCA)},
+  year = 2017,
+  month = 6,
+  url = {https://homes.cs.washington.edu/~djg/papers/wddd17.pdf}
 }
